[gd_scene load_steps=4 format=3 uid="uid://bxjm37aet6rqg"]

[ext_resource type="Script" uid="uid://d3hj1hji4suh8" path="res://inventory/inventory_slot.gd" id="1_7wnod"]
[ext_resource type="FontFile" uid="uid://btooiaidvf2ux" path="res://PressStart2P-Regular.ttf" id="1_nsk0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7wnod"]

[node name="InventorySlot" type="Control"]
z_index = 6
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1820.0
offset_bottom = -980.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7wnod")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 4
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.878431)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_nsk0a")
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ClickableArea" type="Button" parent="."]
unique_name_in_owner = true
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_7wnod")
flat = true

[node name="HighlightBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -10
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.804245, 0.804245, 1.15514e-06, 1)

[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ClickableArea" to="." method="_on_clickable_area_pressed"]
